--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="card-row">
       <div class="app-card" id="auction-thing-card" tabindex="0" onclick="switchApp('auction-thing.html')" onkeypress="if(event.key==='Enter'){switchApp('auction-thing.html');}">
         <div class="app-icon">🏦</div>
-        <div class="app-title">Auction Thing</div>
-        <div class="app-desc">Start auctions and bid for items.</div>
+        <div class="app-title">Auction Tool</div>
+        <div class="app-desc">Auction Generator.</div>
       </div>
       <div class="app-card" id="eviction-tool-card" tabindex="0" onclick="switchApp('eviction-tool.html')" onkeypress="if(event.key==='Enter'){switchApp('eviction-tool.html');}">
         <div class="app-icon">🏠❌</div>
         <div class="app-title">Eviction Tool</div>
-        <div class="app-desc">Generate eviction notices easily.</div>
+        <div class="app-desc">Generate eviction reports.</div>
       </div>
     </div>
   </div>
