--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class="app-title">Eviction Tool</div>
         <div class="app-desc">Generate eviction reports.</div>
       </div>
+      <div class="app-card" id="im-tool-card" tabindex="0" onclick="switchApp('im-tool.html')" onkeypress="if(event.key==='Enter'){switchApp('im-tool.html');}">
+        <div class="app-icon">🧾</div>
+        <div class="app-title">IM Tool</div>
+        <div class="app-desc">Pending reports and eviction commands.</div>
+      </div>
     </div>
   </div>
   <script src="switcher.js"></script>
