--- a/im-tool.html
+++ b/im-tool.html
@@ -6,36 +6,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="switcher.css">
   <style>
-    .report-card {
-      background: #2a2a2a;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      text-align: left;
-      color: #fff;
-    }
-    .report-title {
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-    }
-    .button-row {
-      display: flex;
-      gap: 1rem;
-      margin-top: 0.5rem;
-    }
-    .btn {
-      background-color: #f6c177;
-      border: none;
-      color: #000;
-      padding: 0.4rem 0.7rem;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    .btn:hover {
-      background-color: #e0a74f;
-    }
-  </style>
+:root {
+--bg: #0b1020;
+--panel: #121830;
+--muted: #9aa4c7;
+--text: #e8ecff;
+--accent: #7aa2ff;
+--accent-2: #a77bff;
+--danger: #ff5e6c;
+--border: #283055;
+--shadow: 0 10px 30px rgba(0,0,0,.35);
+--radius: 14px;
+}
+
+
+* { box-sizing: border-box; }
+html, body { margin: 0; height: 100%; }
+body {
+font: 15px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Noto Sans", Arial, "Apple Color Emoji", "Segoe UI Emoji";
+background:
+radial-gradient(1200px 600px at 10% -10%, rgba(122,162,255,.15), transparent),
+radial-gradient(1000px 800px at 110% 10%, rgba(167,123,255,.16), transparent),
+var(--bg);
+color: var(--text);
+padding: 28px 20px;
+}
+
+
+.container {
+max-width: 720px;
+margin: 0 auto;
+}
+
+
+h1 {
+font-weight: 800;
+letter-spacing: .3px;
+font-size: clamp(22px, 3vw, 28px);
+margin-bottom: 18px;
+}
+
+
+#refresh-btn {
+margin-bottom: 1rem;
+background: linear-gradient(135deg, var(--accent), var(--accent-2));
+border: none;
+border-radius: 10px;
+padding: 10px 16px;
+font-weight: 600;
+font-size: 14px;
+cursor: pointer;
+color: white;
+transition: transform .2s ease, box-shadow .2s ease;
+}
+#refresh-btn:hover {
+transform: translateY(-2px);
+box-shadow: 0 6px 14px rgba(0,0,0,.25);
+}
+
+
+.report-card {
+background: var(--panel);
+border: 1px solid var(--border);
+border-radius: var(--radius);
+padding: 1rem;
+margin-bottom: 1rem;
+box-shadow: 0 6px 14px rgba(0,0,0,.2);
+transition: transform .18s ease;
+}
+.report-card:hover {
+transform: translateY(-2px);
+border-color: #3b4580;
+}
+
+
+.report-title {
+font-weight: 600;
+margin-bottom: .6rem;
+font-size: 15px;
+}
+
+
+.button-row {
+display: flex;
+gap: .6rem;
+}
+
+
+.btn {
+background: linear-gradient(135deg, var(--accent), var(--accent-2));
+border: none;
+color: white;
+padding: 0.4rem 0.9rem;
+border-radius: 8px;
+cursor: pointer;
+font-weight: 600;
+font-size: 13px;
+transition: transform .2s ease, box-shadow .2s ease;
+}
+.btn:hover {
+transform: translateY(-1px);
+box-shadow: 0 4px 10px rgba(0,0,0,.2);
+}
+
+
+code { font-family: monospace; background: rgba(255,255,255,.08); padding: 2px 4px; border-radius: 4px; }
+</style>
 </head>
 <body>
   <div class="container">
@@ -154,3 +230,4 @@
   </script>
 </body>
 </html>
+
